--- a/src-files/src/components/Sidebar/Sidebar.css
+++ b/src-files/src/components/Sidebar/Sidebar.css
@@ -32,6 +32,16 @@
         font-weight: 600;
         border-bottom: 1px solid #c2c2c2;
     }
+    /*  */
+    
+    .sidebar-list-wrapper {
+        width: 100%;
+    }
+    
+    .sidebar-list-wrapper nav {
+        display: block;
+        width: 100%;
+    }
     
     .sidebar-list {
         padding: 12px 0px;
@@ -60,7 +70,7 @@
     
     .sidebar-list__link.active {
         color: #000;
-        font-weight: 700;
+        /*  font-weight: 700; */
     }
     
     .sidebar-list__link:active {
@@ -94,8 +104,9 @@
     
     @media (max-width: 567px) {
         .sidebar {
-            flex: 1 1 auto;
-            width: 100%;
+            flex: 1 1 100%;
+            max-width: 100%;
+            height: 100%;
         }
         .sidebar-inner {
             padding: 0px 0px;
@@ -108,7 +119,6 @@
             align-items: center;
             column-gap: 20px;
         }
-        .sidebar-avatar-wrapper {}
         .sidebar__name {
             margin-top: 0px;
             padding-bottom: 2px;
@@ -117,10 +127,11 @@
         .sidebar-list {
             padding: 0px 0px;
             display: flex;
+            width: 100%;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            column-gap: 12px;
+            column-gap: 27px;
             row-gap: 4px;
             border-bottom: none;
         }
@@ -129,7 +140,8 @@
         }
         /*  */
         .sidebar-list__link {
-            line-height: 16px;
+            font-size: 11px;
+            line-height: 12px;
         }
         /*  */
         .sidebar-avatar-wrapper {
